@@ -34,7 +34,13 @@ shadowJar {
     mergeServiceFiles()
 }
 
+// Allow reflective access by Kryo to normally closed Java internals.
+// This is used for testing equality, but also for building automatic Kryo (de)serializers.
 test {
+    jvmArgs = ['--add-opens=java.base/java.io=ALL-UNNAMED',
+               '--add-opens=java.base/java.time=ALL-UNNAMED',
+               '--add-opens=java.base/java.time.zone=ALL-UNNAMED',
+               '--add-opens=java.base/java.lang=ALL-UNNAMED']
     useJUnitPlatform()
 }
 
@@ -206,10 +212,6 @@ dependencies {
     // Persistent storage of files / objects on Amazon S3.
     // Now used only for Seamless Census TODO eliminate this final AWS dependency
     implementation 'com.amazonaws:aws-java-sdk-s3:1.11.341'
-
-    // Old version of GraphQL-Java used by legacy gtfs-api embedded in analysis-backend.
-    // TODO eliminate GraphQL in future API revisions
-    implementation 'com.graphql-java:graphql-java:2.1.0'
 
     // Commons Math gives us FastMath, MersenneTwister, and low-discrepancy vector generators.
     implementation 'org.apache.commons:commons-math3:3.0'
